--- a/contents/css/style.css
+++ b/contents/css/style.css
@@ -108,5 +108,15 @@
 	padding-top: 10px;
 }
 
+.readOnlyLabel{
+	padding-top: 10px;
+}
+
+.titleApplication{
+	margin: 10px;
+	font-size: 20px;
+	color: white;
+}
+
 
 
