--- a/app/views/FormContactView.html
+++ b/app/views/FormContactView.html
@@ -33,7 +33,7 @@
       	</div>  	
     </div>
     <!-- hidden value -->
-    <input ng-show="false" ng-model="contact.id" />
+    <input ng-show="false" ng-model="contact._id" />
 
     <div class="modal-footer">
         <div class="actionButtons">
