--- a/app/views/MainView.html
+++ b/app/views/MainView.html
@@ -1,5 +1,8 @@
 <!-- NAV BAR -->
 <div class="row"><nav-bar></nav-bar></div> 
+<div class="alert alert-success" notification="isSaved" ng-show="isSaved">
+ 	<strong>You successfully {{actionMode}} a contact
+ </div>
 <div>    
 	<div ng-repeat="contact in contacts | orderBy:'name' | filter:search">
 		<div class="col-sm-4 col-md-3">
@@ -9,7 +12,7 @@
     				<span class="nameTitle">{{contact.name}}</span>
     			</div>
 				<div class="caption contactDetail">
-					<div class="phoneDetail pull-left glyphicon glyphicon-earphone">{{contact.phone}}</div>
+					<div class="phoneDetail pull-left glyphicon glyphicon-earphone">{{contact._id}}</div>
 					<div class="addressDetail pull-left glyphicon glyphicon-screenshot">{{contact.address}}</div>
 					<a class="pull-right glyphicon glyphicon-trash" ng-click="deleteContact($event, contact)"></a>
 				</div>    			
