Working on Jasmine UNIT Tests

--- a/app/views/MainView.html
+++ b/app/views/MainView.html
@@ -1,6 +1,6 @@
 <!-- NAV BAR -->
 <div class="row"><nav-bar></nav-bar></div> 
-<div class="alert alert-success" notification="isSaved" ng-show="isSaved">
+<div class="alert alert-success saveMessage" ng-show="isSaved">
  	<strong>You successfully {{actionMode}} a contact
  </div>
 <div>    
