--- a/app/views/NavBar.html
+++ b/app/views/NavBar.html
@@ -7,7 +7,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<ul class="nav navbar-nav navbar-right searchBarContainer">
 					<li><label class="help-inline">Filter: </label></li>
-					<li><input class="searchBar form-control" ng-model="search" type="text"></li>
+					<li><input class="searchBar form-control" ng-model="search.name" type="text"></li>
 				</ul>
 			</ul>
 		</div>
