--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -1,219 +1,10 @@
+/*------------------------------------*\
+    #OTHER CSS FILES MUST BE IMPORTED HERE
+\*------------------------------------*/
+
 @import "compass/css3";
 @import "modal";
 @import "form";
 @import "thumbnail";
+@import "container";
 
-.caption.contactDetail {
-  height: 80px;
-  margin-top: 5px;
-}
-
-.contactDiv a {
-  color: black;
-  padding-top: 18px;
-
-  &:hover {
-    color: red;
-    font-size: 21px;
-  }
-}
-
-.thumbnail .nameTitle {
-  font-weight: bold;
-  margin: 10px 0 10px 6px;
-  font-size: 18px;
-}
-
-.actionButtons {
-  clear: both;
-  a {
-    padding: 10px 0 10px 15px;
-    float: right;
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
-    &:hover {
-      text-decoration: underline;
-      color: blue;
-      font-weight: bold;
-      cursor: pointer;
-    }
-  }
-}
-
-.searchBarContainer {
-  padding: 15px 5px 15px 0px;
-}
-
-.contactDiv:hover {
-  cursor: pointer;
-  background-color: #e7e7ed;
-}
-
-.header {
-  background-color: #428bca;
-}
-
-.nameTitle {
-  color: white;
-}
-
-.glyphicon-user {
-  font-size: 20px;
-}
-
-#navbarCollapse .addContact:hover {
-  background-color: #e7e7ed;
-}
-
-.ng-invalid:focus ~ .help-block {
-  display: none;
-}
-
-#contactForm .btn:hover, .modal-header .close:hover {
-  font-weight: bold;
-}
-
-.addressDetail {
-  clear: both;
-  padding-top: 10px;
-}
-
-.readOnlyLabel {
-  padding-top: 10px;
-}
-
-.titleApplication {
-  margin: 10px;
-  font-size: 20px;
-  color: white;
-}
-
-.saveMessage {
-  opacity: 1.0;
-  display: block !important;
-  transition: opacity 1s;
-  &.ng-hide {
-    opacity: 0;
-    margin: 0;
-    padding: 0;
-    border: none;
-  }
-}
-
-body {
-  padding-top: 70px;
-}
-
-.slide-image {
-  width: 100%;
-}
-
-.carousel-holder {
-  margin-bottom: 30px;
-}
-
-.carousel-control, .item {
-  border-radius: 4px;
-}
-
-.caption {
-  height: 130px;
-  overflow: hidden;
-  h4 {
-    white-space: nowrap;
-  }
-}
-
-.thumbnail img {
-  width: 100%;
-}
-
-.ratings {
-  color: #d17581;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.thumbnail {
-  padding: 0;
-  .caption-full {
-    padding: 9px;
-    color: #333;
-  }
-}
-
-footer {
-  margin: 50px 0;
-}
-
-
-
-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(0,0,0,0.2);
-  padding: 16px;
-  height: 55px;
-}
-
-footer {
-  padding-top: 20px;
-  border-top: 1px solid black;
-  posiion: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 50px;
-}
-
-.main-header {
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 24px;
-  color: #31708f;
-}
-
-.action-bar {
-  padding: 14px;
-
-  a {
-    &:hover {
-      text-decoration: none;
-    }
-  }
-
-  span {
-    font-weight: 600;
-  }
-
-  .search-bar {
-    display: inline-block;
-    width: 300px;
-    padding: 6px;
-    margin-left: 5px;
-  }
-}
-
-.main-content {
-  min-height: 300px;
-  padding-top: 30px;
-
-}
-
-.add-contact {
-  display: inline-block;
-  font-size: 16px;
-
-  &::before {
-    font-size: 20px;
-    line-height: 20px;
-    vertical-align: middle;
-  }
-
-  & > span {
-    padding-left: 8px;
-  }
-}
