--- a/public/views/ThumbnailInformation.tpl.html
+++ b/public/views/ThumbnailInformation.tpl.html
@@ -1,4 +1,4 @@
-<div class="thumbnail contact clearfix" ng-click="vmThumbnail.contactAction(contact)">
+<div class="thumbnail contact clearfix box-depth" ng-click="vmThumbnail.contactAction(contact)">
     <div class="thumbnail-header">
         <i class="glyphicon glyphicon-user"></i>
         <span class="thumbnail-title">{{ contact.name }}</span>
