--- a/public/views/FormContact.tpl.html
+++ b/public/views/FormContact.tpl.html
@@ -1,35 +1,37 @@
-<div class="btf-modal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Create</h4>
-                <span class="glyphicon glyphicon-remove close" ng-click="vmContactModal.close()"></span>
+<div class="modal fade in">
+    <div class="btf-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Create</h4>
+                    <span class="glyphicon glyphicon-remove close" ng-click="vmContactModal.close()"></span>
+                </div>
+                <form name="contactForm" novalidate ng-submit="vmContactModal.saveContact()">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="name" class="required">Name</label>
+                            <input name="name" class="form-control" ng-model="vmContactModal.newContact.name" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="address" class="required">Address</label>
+                            <input name="address" class="form-control" ng-model="vmContactModal.newContact.address" required>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="phone" class="required">Phone</label>
+                            <input name="phone" class="form-control" ng-model="vmContactModal.newContact.phone" required>
+                        </div>
+
+                        <!-- hidden value -->
+                        <input ng-show="false" ng-model="vmContactModal.newContact._id">
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" type="submit">Create</button>
+                        <button class="btn btn-secondary" ng-click="vmContactModal.close()">Cancel</button>
+                    </div>
+                </form>
             </div>
-            <form name="contactForm" novalidate ng-submit="vmContactModal.saveContact()">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="name" class="required">Name</label>
-                        <input name="name" class="form-control" ng-model="vmContactModal.newContact.name" placeholder="Name" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="address" class="required">Address</label>
-                        <input name="address" class="form-control" ng-model="vmContactModal.newContact.address" placeholder="Address" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="phone" class="required">Phone</label>
-                        <input name="phone" class="form-control" ng-model="vmContactModal.newContact.phone" placeholder="Phone" required>
-                    </div>
-
-                    <!-- hidden value -->
-                    <input ng-show="false" ng-model="vmContactModal.newContact._id">
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-primary" type="submit">Create</button>
-                    <button class="btn btn-secondary" ng-click="vmContactModal.close()">Cancel</button>
-                </div>
-            </form>
         </div>
     </div>
 </div>
