--- a/public/styles/_form.scss
+++ b/public/styles/_form.scss
@@ -3,7 +3,7 @@
 \*------------------------------------*/
 
 .required::after {
-  color: red;
+  color: #F44336;
   font-weight: bold;
   font-size: 18px;
 }
