--- a/public/views/ConfirmDialog.tpl.html
+++ b/public/views/ConfirmDialog.tpl.html
@@ -7,7 +7,7 @@
                     <span class="glyphicon glyphicon-remove close" ng-click="vmConfirmationModal.close()"></span>
                 </div>
                 <div class="modal-body">
-                    Are you sure do you want to delete <b>{{ vmConfirmationModal.contact.name }}</b>?
+                    Are you sure do you want to delete <b>{{ contact.name }}</b>?
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-primary" ng-click="vmConfirmationModal.delete()">Delete</button>
