Refactor server. Refactor templates. Fix delete and update actions

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -13,6 +13,7 @@ Error: File to import not found or unreadable: compass/css3.
 7: @import "form";
 8: @import "thumbnail";
 9: @import "container";
+10: @import "button";
 
 Backtrace:
 main.scss:5
@@ -58,4 +59,4 @@ main.scss:5
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: File to import not found or unreadable: compass/css3.\A        Load paths:\A          \A         on line 5 of main.scss\A \A 1: /*------------------------------------*\\A 2:     #OTHER CSS FILES MUST BE IMPORTED HERE\A 3: \*------------------------------------*/\A 4: \A 5: @import \"compass/css3\";\A 6: @import \"modal\";\A 7: @import \"form\";\A 8: @import \"thumbnail\";\A 9: @import \"container\";"; }
+  content: "Error: File to import not found or unreadable: compass/css3.\A        Load paths:\A          \A         on line 5 of main.scss\A \A 1: /*------------------------------------*\\A 2:     #OTHER CSS FILES MUST BE IMPORTED HERE\A 3: \*------------------------------------*/\A 4: \A 5: @import \"compass/css3\";\A 6: @import \"modal\";\A 7: @import \"form\";\A 8: @import \"thumbnail\";\A 9: @import \"container\";\A 10: @import \"button\";"; }
