--- a/public/views/Dashboard.tpl.html
+++ b/public/views/Dashboard.tpl.html
@@ -1,6 +1,6 @@
 <!-- ACTION BAR -->
 <div class="action-bar clearfix">
-	<a class="glyphicon glyphicon-plus add-contact" href="javascript:void(0);" ng-click="vmDashboard.openCreateContactModal()">
+	<a class="glyphicon glyphicon-plus add-contact" href="javascript:void(0);" ng-click="vmDashboard.openContactActionModal()">
 		<span>Contact</span>
 	</a>
 	<div class="filter-box pull-right">
