--- a/public/styles/_button.scss
+++ b/public/styles/_button.scss
@@ -2,8 +2,13 @@
     #MODAL
 \*------------------------------------*/
 .btn-primary {
-  &.edit {
-    background-color: #66BB6A;
-    border: 1px solid #388E3C;
-  }
+    &.edit {
+        background-color: #66BB6A;
+        border: 1px solid #C8E6C9;
+
+        &:hover {
+            background-color: #388E3C;
+            border: 1px solid #1B5E20;
+        }
+    }
 }
