--- a/public/views/Dashboard.tpl.html
+++ b/public/views/Dashboard.tpl.html
@@ -11,7 +11,7 @@
 
 <div class="alert-message" ng-if="vmDashboard.alertMessage">{{ vmDashboard.alertMessage }}</div>
 <div class="main-content">
-	<div ng-repeat="contact in vmDashboard.contacts | orderBy:'name' | filter:search">
+	<div class="contact" ng-repeat="contact in vmDashboard.contacts | orderBy:'name' | filter:search">
 		<div class="col-sm-4 col-md-3" thumbnail-information="contact"></div>
  	</div>  	
 </div>
